<resources>
    <string name="app_name">Recommendation Letters</string>
    <string name="header">Login Page</string>
    <string name="login">LOGIN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="not_registered">Not registered yet?</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="registration_page">Registration Page</string>
    <string name="reg_email">E-mail</string>
    <string name="reg_passwd">Password</string>
    <string name="conf_passwd">Confirm password</string>
    <string name="reg_signup">SIGN UP</string>
    <string name="students">Students</string>
    <string name="requirements">Requirements</string>
    <string name="luminance">Current luminance level:</string>
    <string name="light_sensor">LIGHT SENSOR</string>
    <string name="gps">GPS</string>
    <string name="choose">CHOOSE</string>
    <string name="registration_nr">REGISTRATION NUMBER:</string>
    <string name="grades_average">GRADES AVERAGE:</string>
    <string name="lesson_name">LESSON NAME</string>
    <string name="grade">GRADE</string>
    <string name="grant_letter">GRANT RECOMMENDATION LETTER</string>
    <string name="date">Date:</string>
    <string name="professor_name">Professor name:</string>
    <string name="student_name">Student name:</string>
    <string name="grant">GRANT</string>
    <string name="temperature">TEMPERATURE</string>
    <string name="current_temperature">Current temperature:</string>
    <string name="spinner" translatable="false">dropDownMenuExample</string>
    <string-array name="options">
        <item>Prototype for grades 6-8</item>
        <item>Prototype for grades 8-9</item>
        <item>Prototype for grades 9-10</item>
    </string-array>
</resources>
